# scryfall-rs

./: Cargo.toml  LICENSE  README.md  rustfmt.toml
.github/ISSUE_TEMPLATE/: deserialization-failed.md  unsupported-search-syntax.md
.github/workflows/: rust.yml  scheduled.yml
examples/: all-basic-lands.rs  image_status.rs  top-printings.rs
examples/bulk/: main.rs
examples/streaming-bulk/: main.rs
examples/top-printings/: main.rs
scripts/: test-features.sh
src/: bulk.rs  card.rs  card_searcher.rs  card_set.rs  catalog.rs  error.rs  format.rs  lib.rs  list.rs  ruling.rs  search.rs  set.rs  uri.rs  util.rs
src/card/: border_color.rs  border_colour.rs  card_faces.rs  color.rs  colour.rs  finishes.rs  frame.rs  frame_effect.rs  game.rs  image_status.rs  languages.rs  layout.rs  legality.rs  preview.rs  price.rs  produced_mana.rs  promo_types.rs  purchase_uris.rs  rarity.rs  related_card.rs  related_uris.rs  ruling.rs  security_stamp.rs
src/card_set/: set_type.rs
src/search/: advanced.rs  color_aliases.rs  param.rs  query.rs
src/search/param/: compare.rs  criteria.rs  functions.rs  property.rs  value.rs
src/set/: set_code.rs  set_type.rs
src/util/: array_stream_reader.rs  stream_iterator.rs  streaming_deserializer.rs  uri.rs
tests/: bulk_data.rs
tests/variants-feature/: default_variants.rs  main.rs  unknown_variants.rs  unknown_variants_slim.rs
