[package]
name = "scryfall"
version = "0.16.2"
authors = ["Mendess2526 <pedro.mendes.26@gmail.com>"]
edition = "2018"
description = "A wrapper around the scryfall magic the gathering api"
license = "MIT"
repository = "https://github.com/mendess/scryfall-rs"
readme = "README.md"
keywords = ["mtg", "Magic", "API", "Scryfall"]
categories = ["api-bindings", "games"]

[features]
default = ["bulk_caching"]
bulk_caching = ["heck"]
bin = ["dep:tokio"]

[dependencies]
async-trait = "0.1.77"
cfg-if = "1"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3.30"
heck = { version = "0.4", optional = true }
httpstatus = "0.1"
itertools = "0.12"
once_cell = "1"
percent-encoding = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.7"
static_assertions = "1"
thiserror = "1"
tinyvec = "1"
url = { version = "2", features = ["serde"] }
uuid = { version = "1", features = ["serde"] }
tokio = { version = "1", features = ["macros"], optional = true }
surf = "2.3.2"

[dev-dependencies]
strum = { version = "0.26", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tokio-test = "0.4.3"

[[bin]]
name = "search"
path = "src/bin/search.rs"
required-features = ["bin"]
