[package]
name = "scryfall"
version = "0.18.0"
authors = ["Mendess2526 <pedro.mendes.26@gmail.com>"]
edition = "2021"
description = "A wrapper around the scryfall magic the gathering api"
license = "MIT"
repository = "https://github.com/mendess/scryfall-rs"
readme = "README.md"
keywords = ["mtg", "Magic", "API", "Scryfall"]
categories = ["api-bindings", "games"]

[package.metadata.docs.rs]
features = ["unknown_variants"]

[features]
# default = ["bulk_caching"]
default = []
bulk_caching = ["dep:heck"]
unknown_variants = []
unknown_variants_slim = []
bin = ["tokio/macros", "tokio/rt-multi-thread"]

[dependencies]
async-trait = "0.1.81"
bytes = "1.10.0"
cfg-if = "1"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3.30"
futures-util = {version = "0.3.31"}
heck = { version = "0.5", optional = true }
httpstatus = "0.1"
itertools = "0.13"
once_cell = "1"
percent-encoding = "2"
reqwest = {version = "0.12.12", features = ["json" ,"blocking", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.7"
static_assertions = "1"
thiserror = "1"
tinyvec = "1"
tokio = { version = "1", default-features = false, features = ["sync", "fs"] }
tokio-stream = {version = "0.1.17", features = ["sync"]}
tokio-util = {version = "0.7.13", features = ["io-util", "io"]}
url = { version = "2", features = ["serde"] }
uuid = { version = "1", features = ["serde"] }

[dev-dependencies]
strum = { version = "0.26", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tokio-test = "0.4.4"
static_assertions = "1.1.0"
rand = "0.9.0"

[[bin]]
name = "search"
path = "src/bin/search.rs"
required-features = ["bin"]
